[gd_scene load_steps=5 format=3 uid="uid://c2ikpdup63nbk"]

[ext_resource type="Script" path="res://Scripts/game_over.gd" id="1_eqmhx"]
[ext_resource type="FontFile" uid="uid://cpqgtjfuwlt76" path="res://Assets/Fonts/Trigram-Regular.ttf" id="2_6w2nc"]
[ext_resource type="FontFile" uid="uid://d1ndhqw8y1fjs" path="res://Assets/Fonts/kenney_mini_square.ttf" id="2_qydwp"]

[sub_resource type="LabelSettings" id="LabelSettings_j1sxe"]
font = ExtResource("2_6w2nc")
font_size = 32
font_color = Color(1, 0, 0, 1)

[node name="GameOver" type="Node2D"]
script = ExtResource("1_eqmhx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameOverLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_j1sxe")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(400, 2.08165e-12)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qydwp")
theme_override_font_sizes/font_size = 16
text = "YOU HELD OUT AGAINST 999 ATTACKERS BEFORE LOSING THE TACO STAND"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="RestartButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qydwp")
theme_override_font_sizes/font_size = 16
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_qydwp")
theme_override_font_sizes/font_size = 16
text = "MAIN MENU"

[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/CenterContainer/VBoxContainer/HBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
